# aca-cuda

./: CMakeLists.txt  colorization.cpp  colorization.h  conanfile.txt  construction.cu  construction.cuh  cpu_types.h  flatten.cpp  flatten.h  gpu_types.h  main.cpp  main.cu  node.h  pixel.h  rgb.h  run.sh  soa.h  utils.cu  utils.h
